blog posts: fix sizing and alignment of SVG anchor icons on all headings (h1...h6) (gatsby-remark-autolink-headers).

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -267,6 +267,115 @@ h6 a {
   }
 }
 
+.autolink-header-anchor.before {
+  svg {
+    fill: var(--primary-text-color);
+  }
+}
+
+h1 .autolink-header-anchor.before {
+  top: 0.25rem;
+
+  svg {
+    width: 2rem;
+    height: 2rem;
+  }
+
+  @media $midScreenMedia {
+    top: 0.5rem;
+
+    svg {
+      width: 3.5rem;
+      height: 3.5rem;
+    }
+  }
+}
+
+h2 .autolink-header-anchor.before {
+  top: 0.375rem;
+
+  svg {
+    width: 1.75rem;
+    height: 1.75rem;
+  }
+
+  @media $midScreenMedia {
+    top: 0.5rem;
+
+    svg {
+      width: 3rem;
+      height: 3rem;
+    }
+  }
+}
+
+h3 .autolink-header-anchor.before {
+  top: 0.5rem;
+
+  svg {
+    width: 1.675rem;
+    height: 1.675rem;
+  }
+
+  @media $midScreenMedia {
+    top: 0.5rem;
+
+    svg {
+      width: 2.5rem;
+      height: 2.5rem;
+    }
+  }
+}
+
+h4 .autolink-header-anchor.before {
+  top: 0.375rem;
+
+  svg {
+    width: 1.5rem;
+    height: 1.5rem;
+  }
+
+  @media $midScreenMedia {
+    top: 0.5rem;
+
+    svg {
+      width: 1.75rem;
+      height: 1.75rem;
+    }
+  }
+}
+
+h5 .autolink-header-anchor.before {
+  top: 0.25rem;
+
+  svg {
+    width: 1.375rem;
+    height: 1.375rem;
+  }
+
+  @media $midScreenMedia {
+    top: 0.5rem;
+
+    svg {
+      width: 1.5rem;
+      height: 1.5rem;
+    }
+  }
+}
+
+h6 .autolink-header-anchor.before {
+  top: 0.25rem;
+
+  @media $midScreenMedia {
+    top: 0.375rem;
+
+    svg {
+      width: 1.25rem;
+      height: 1.25rem;
+    }
+  }
+}
+
 ul {
   margin-block-start: 0.25rem;
   margin-block-end: 0;
@@ -377,15 +486,6 @@ html.theme-dark .hljs {
 
 #main-nav.active {
   height: 370px;
-}
-
-h3 .autolink-header-anchor.before {
-  top: 0.75rem;
-
-  svg {
-    width: 2rem;
-    height: 2rem;
-  }
 }
 
 #disqus_thread {
